--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<meta name="apple-mobile-web-app-title" content="ColorPikr">
 	<meta name="Description" content="ColorPickr is a tool for generating random colors that can be downloaded as a single color swatch. This is handy for quickly getting solid color backgrounds to be used in social networks such as Instagram.">
 	<link rel="manifest" href="/manifest.json">
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<title>ColorPikr</title>
 	<link rel="stylesheet" href="styles/app.css" type="text/css" />
 	<script src="Scripts/knockout-3.4.0.js"></script>
